<?xml version="1.0"?>
<package format="3">
  <name>px4_sim_bridge</name>
  <version>0.0.1</version>
  <description>Replay real drone flight data into PX4 simulation topics.</description>

  <maintainer email="vannguyenag2000@gmail.com">Nguyen Tran</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
